--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "del":                 "^1.0.0",
     "gulp":                "^3.8.10",
+    "gulp-cached":         "^1.0.1",
     "gulp-concat":         "^2.4.2",
     "gulp-cssmin":         "^0.1.6",
     "gulp-jshint":         "^1.9.0",
