--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulpfile-customize-bootstrap",
-  "description": "Gulpfile to build a cusomized Bootstrap version",
-  "version": "0.0.1",
+  "description": "Gulpfile to build a customized Bootstrap version",
+  "version": "0.0.4",
   "author": "Jan T. Sott",
   "homepage": "http://github.com/idleberg/gulpfile-customize-bootstrap",
   "license": "MIT",
@@ -11,20 +11,20 @@
     "url":  "git://github.com/idleberg/gulpfile-customize-bootstrap"
   },
   "dependencies": {
-    "bootstrap":           "^3.3.1"
+    "bootstrap":           "^3.3.5"
   },
   "devDependencies": {
-    "del":                 "^1.0.0",
-    "gulp":                "^3.8.10",
-    "gulp-cached":         "^1.0.1",
-    "gulp-concat":         "^2.4.3",
-    "gulp-cssmin":         "^0.1.6",
-    "gulp-jshint":         "^1.9.0",
-    "gulp-json-lint":      "^0.0.1",
-    "gulp-less-sourcemap": "^1.3.3",
-    "gulp-prompt":         "^0.1.1",
-    "gulp-uglify":         "^1.0.2",
-    "run-sequence":        "^1.0.2"
+    "del":                 "^1.2.0",
+    "gulp":                "^3.9.0",
+    "gulp-cached":         "^1.1.0",
+    "gulp-concat":         "^2.6.0",
+    "gulp-cssmin":         "^0.1.7",
+    "gulp-jshint":         "^1.11.2",
+    "gulp-json-lint":      "^0.1.0",
+    "gulp-less-sourcemap": "^1.4.2",
+    "gulp-prompt":         "^0.1.2",
+    "gulp-uglify":         "^1.2.0",
+    "run-sequence":        "^1.1.1"
   },
    "scripts": {
     "test": "gulp selftest"
