--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-jshint": "^1.11.2",
     "gulp-json-lint": "^0.1.0",
+    "gulp-less": "^3.0.5",
     "gulp-prompt": "^0.1.2",
     "gulp-uglify": "^1.2.0",
     "less-plugin-autoprefix": "^1.5.1",
